small fixes like replacing date with new java time API and replacing bound class with lambda stream API