@@ -87,6 +87,7 @@
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens java.base/java.security.spec=ALL-UNNAMED
+                        --add-opens java.base/java.time=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
